# provenance-service

./: .dockerignore  .gitignore  Dockerfile  README.md  certs.md  main.py  pyproject.toml  test_client.py
.github/workflows/: publish.yaml
app/: conf.py  keystores.py  logger.py  models.py  provenance.py
scripts/: sign-with-kms.py  verify-certificate.py  verify-certificate.sh
tests/: test_main.py
